--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Portfolio",
-  "name": "Alvin Zhang's Portfolio",
+  "short_name": "Alvin",
+  "name": "Alvin Zhang",
   "icons": [
     {
       "src": "favicon.ico",
